04.myfirst-api-server/06.blue-green/ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: skala-myfirst-ingress
  namespace: class-0
  labels:
    app: skala-myfirst-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: skala-ingress.cloud.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: skala-myfirst-api-server-new
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'skala-ingress.cloud.skala-ai.com'
    secretName: skala-ingress-cloud-tls-cert
